# Animal-Behavior-Technicals

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Conduct.md  LICENSE  Makefile  README.md  README.rst  contributing.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
animal_behavior_technicals/: __init__.py  cli.py  main.py  utils.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_utils.py
tests_anibeh/: test_animal_behavior_technicals.py  test_utils.py
vignettes for explanation of functions in the package/: Climate Zone.ipynb  Region.ipynb  Sensor Type.ipynb  Status Accurate.ipynb  Temperature.ipynb
